--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,18 @@
+# Core data processing libraries
 numpy>=1.20.0
 pandas>=1.3.0
+scipy>=1.7.0
+
+# Visualization
 matplotlib>=3.4.0
 seaborn>=0.11.0
+
+# Deep learning
+torch>=1.9.0
+timm>=0.5.4
+
+# Image processing
+scikit-image>=0.18.0
+
+# Signal processing
+sak @ git+https://github.com/guillermo-jimenez/sak.git
