--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,16 @@
 numpy>=1.20.0
 pandas>=1.3.0
 scipy>=1.7.0
+opencv-python>=4.5.0
+scikit-learn>=1.0.0
+openpyxl>=3.0.0
 
 # Visualization
 matplotlib>=3.4.0
 seaborn>=0.11.0
 
 # Deep learning
-torch>=1.9.0
+torch==2.4.1
 timm>=0.5.4
 
 # Image processing
