wip: done alignment, but pending to change approach to exclude ecgs that are very shifted (shifted ecgs should be of at least around 2s)

--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,6 @@ scikit-image>=0.18.0
 
 # Signal processing
 sak @ git+https://github.com/guillermo-jimenez/sak.git
+
+# Jupyter notebooks
+ipykernel>=6.0.0
